Prevent horizontal scrolling in planTab
> This only comes up if you have a plan target or section that has say
over 50 characters in 1 word. It’d be optimum to force line-breaks in
extremely long words, but I don’t see this coming up as a real issue
for at least for a while.

--- a/clientFilePage/planTab.styl
+++ b/clientFilePage/planTab.styl
@@ -74,7 +74,8 @@
 						
 
 		> .sections
-			overflow auto
+			overflow-y auto
+			overflow-x hidden
 			flex 1
 			padding 0 30px 10px 30px
 			
@@ -164,7 +165,8 @@
 								margin 5px
 
 	> .targetDetail
-		overflow auto
+		overflow-y auto
+		overflow-x hidden
 		flex 1
 
 		border-left 2px solid sidebar-borders
